Connect drift metrics computation in Spark with Hub for serving to frontend (#95)
## Summary
Builds on a couple of the summary computation PRs and data generation to
wire things up so that Hub can serve them.
* Yanked out mock data based endpoints (model perf / drift, join &
feature skew) - decided it would be confusing to have a mix of mock and
generated data so we just have the generated data served
* Dropped a few of the scripts introduced in
https://github.com/zipline-ai/chronon/pull/87. We bring up our
containers the way and we have a script `load_summaries.sh` that we can
trigger that leverages the existing app container to load data.
* DDB ingestion was taking too long and we were dropping a lot of data
due to rejected execution exceptions. To unblock for now, we've gone
with an approach of making a bulk put HTTP call from the
ObservabilityDemo app -> Hub and Hub utilizing a InMemoryKV store to
persist and serve up features.
* Added an endpoint to serve the join that are configured as we've
switched from the model based world.

There's still an issue to resolve around fetching individual feature
series data. Once I resolve that, we can switch this PR out of wip mode.

To test / run:
start up our docker containers:
```
$ docker-compose -f docker-init/compose.yaml up --build
...
```
In a different term load data:
```
$ ./docker-init/demo/load_summaries.sh 
Done uploading summaries! 🥳
```

You can now curl join & feature time series data.
Join drift (null ratios)
```
curl -X GET   'http://localhost:9000/api/v1/join/risk.user_transactions.txn_join/timeseries?startTs=1673308800000&endTs=1674172800000&metricType=drift&metrics=null&offset=10h&algorithm=psi'
```

Join drift (value drift)
```
curl -X GET   'http://localhost:9000/api/v1/join/risk.user_transactions.txn_join/timeseries?startTs=1673308800000&endTs=1674172800000&metricType=drift&metrics=value&offset=10h&algorithm=psi'
```

Feature drift:
```
curl -X GET   'http